updated css, and fixed some bugs for author of post not showing img properly.

--- a/webdev/static/styles.css
+++ b/webdev/static/styles.css
@@ -384,7 +384,7 @@ about-row
 
 	/* side card */
 .side-card {
-	display: block;
+	display: flex;
 }
 
 [id^="togList"],                        /* HIDE CHECKBOX */
@@ -546,15 +546,12 @@ a {
 
 .card-img {
   justify-self: center;
-  max-width: 100%;
 	border-radius: 50%;
   border: 2px solid white;
-
-	width: 300px;
-	height: 300px;'
-	border-radius: 150px;
-	-webkit-border-radius: 150px;
-	-moz-border-radius: 150px;
+	width: 100%;
+	height: 100%;
+	max-width: 200px;
+	max-height: 200px;
 }
 
 
